stutern index.hmtl task

--- a/index.html
+++ b/index.html
@@ -11,4 +11,8 @@
 
     <P>This is the task for module 2: Intoduction to html</P>
 </body>
+
+<footer>
+    <h3>This is the footer of the page</h3>
+</footer>
 </html>
